# tnadesktop

./: .gitignore  CHANGES.md  DEVELOPMENT.md  HANDOFF.md  LEARNINGS.md  QUICK_START.md  README.md  ROADMAP.md  app.R  global.R  index.html  loading.html  main.js  package-lock.json  package.json  tnashiny_core.R  tnashiny_full.R  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
R/: mod_drive_local.R  mod_export.R  mod_user_menu.R
assets/: index-BZEPaHsG.js  index-CHN3ueae.js  index-DNyhvrBn.css  index-DgoB-Ntw.js  index.es-Do0dmSwo.js  index.es-ix1k2-SO.js  index.es-phEIt90q.js
config/: darwin.yaml  default.yaml  linux.yaml  win32.yaml
public/: CNAME
scripts/: download-r-portable.ps1  download-r-portable.sh  setup-r-packages.R  test-shiny.R
src/: data.ts  main.ts  sample-data.csv  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/__tests__/: anova.test.ts  bootstrap.test.ts  communities.test.ts  data.test.ts  graph-metrics.test.ts  helpers.ts  indices.test.ts  network-utils.test.ts  patterns.test.ts  permutation.test.ts  random-networks.test.ts  reliability.test.ts  stability.test.ts  stats-utils.test.ts
src/analysis/: anova.ts  bootstrap.ts  communities.ts  graph-metrics.ts  indices.ts  pagerank.ts  patterns.ts  permutation.ts  random-networks.ts  reliability.ts  simulate.ts  stability.ts  (+1 more)
tmp/: check_real_data.ts  check_sample.ts  equiv_check.ts  gen_equiv100.R  run_equiv100.ts
www/: custom.css
(+23 files in other folders)
