[package]
name = "tna-desktop"
version = "0.1.0"
description = "TNA Desktop – Transition Network Analysis"
authors = ["Mohammed Saqr"]
edition = "2024"

[lib]
name = "tna_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tna-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
