[package]
name = "dynalytics-desktop"
version = "0.1.0"
description = "Dynalytics Desktop – Analytics of Dynamics"
authors = ["Mohammed Saqr"]
edition = "2024"

[lib]
name = "dynalytics_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dynalytics-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
